--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Modelo</title>
 </head>
+
 <body>
-    <div id="app"></div>
+
+  <section class="container">
+    <h1>Gerador de CPF</h1>
+    <div class="cpf-gerado"></div>
+  </section>
+
+  <script src="./assets/js/bundle.js"></script>
 </body>
-    <script src="./assets/js/bundle.js"></script>
+
 </html>
