--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,20 @@
   <section class="container">
     <h1>Gerador de CPF</h1>
     <div class="cpf-gerado"></div>
+    <h1>Gerador de senha</h1>
+    
+
+    <div class="senha-gerada">Selecione as opções</div>
+
+    Quantidade de caracteres <input value="20" type="text" class="qtd-caracteres"><br>
+    Adicionar maiúsculas <input type="checkbox" class="chk-maiusculas" checked><br>
+    Adicionar minúsculas <input type="checkbox" class="chk-minusculas"><br>
+    Adicionar números <input type="checkbox" class="chk-numeros"><br>
+    Adicionar símbolos <input type="checkbox" class="chk-simbolos" checked><br>
+    <button class="gerar-senha">Gerar senha</button>
+
+    <div class="new-pass"></div>
+    
   </section>
 
   <script src="./assets/js/bundle.js"></script>
